--- a/src/Estudos.EFCore/Estudos.EFCore.csproj
+++ b/src/Estudos.EFCore/Estudos.EFCore.csproj
@@ -15,4 +15,10 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
