--- a/src/Estudos.EFCore/appsettings.json
+++ b/src/Estudos.EFCore/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=CursoAvancadoEFCore;Integrated Security=true;"
+    "SqlServerConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=CursoAvancadoEFCore;Integrated Security=true;pooling=true"
   }
 }
