--- a/src/Estudos.EFCore.Functions/Estudos.EFCore.Functions.csproj
+++ b/src/Estudos.EFCore.Functions/Estudos.EFCore.Functions.csproj
@@ -7,7 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +17,10 @@
 
   <ItemGroup>
     <Folder Include="Domain\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Estudos.EFCore.Utils\Estudos.EFCore.Utils.csproj" />
   </ItemGroup>
 
 </Project>
