--- a/src/Estudos.EFCore.Infraestrutura/Estudos.EFCore.Infraestrutura.csproj
+++ b/src/Estudos.EFCore.Infraestrutura/Estudos.EFCore.Infraestrutura.csproj
@@ -7,7 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Estudos.EFCore.Utils\Estudos.EFCore.Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
