[CLEANUP] Corrigindo a pasta do projeto de transações

--- a/src/Estudos.EFCore.Transacoes/Estudos.EFCore.Transacoes.csproj
+++ b/src/Estudos.EFCore.Transacoes/Estudos.EFCore.Transacoes.csproj
@@ -10,8 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Estudos.EFCore.Utils\Estudos.EFCore.Utils.csproj" />
+    <ProjectReference Include="..\Estudos.EFCore.Utils\Estudos.EFCore.Utils.csproj" />
   </ItemGroup>
+
+
 
   <ItemGroup>
     <None Update="appsettings.json">
