--- a/src/Estudos.EFCore.MultiTenant/appsettings.json
+++ b/src/Estudos.EFCore.MultiTenant/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=MultiTenant;Integrated Security=true;pooling=true"
+  }
 }
