[FEATURE] Estratégia 3 - Banco de dados

--- a/src/Estudos.EFCore.MultiTenant/appsettings.json
+++ b/src/Estudos.EFCore.MultiTenant/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=MultiTenant;Integrated Security=true;pooling=true"
+    "SqlServerConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=MultiTenant;Integrated Security=true;pooling=true",
+    "tenant-1": "Server=(localdb)\\mssqllocaldb; Database=tenant-1;Integrated Security=true;",
+    "tenant-2": "Server=(localdb)\\mssqllocaldb; Database=tenant-2;Integrated Security=true;",
+    "custom": "Server=(localdb)\\mssqllocaldb; Database=_DATABASE_;Integrated Security=true;"
   }
 }
