--- a/src/Estudos.EFCore.RepositoryUoW/Estudos.EFCore.RepositoryUoW.csproj
+++ b/src/Estudos.EFCore.RepositoryUoW/Estudos.EFCore.RepositoryUoW.csproj
@@ -7,10 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.4" />
   </ItemGroup>
 
 </Project>
